monticore-generator/src/test/resources/cocos/invalid/A4090/A4090a.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4090;

grammar A4090a {

  A = "a";
  B = (who:A | who:"Tom")*;

}
